Scientific Calculator by Georgios Iasonidis/Java_erg/target/generated-sources/antlr4/HelloParser.java
// Generated from Hello.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ID=1, WS=2, ADD=3, MINUS=4, MULTI=5, DIV=6, POW=7, SIN=8, COS=9, TAN=10, 
		COT=11, MOD=12, AND=13, OR=14, NOT=15, XOR=16, NAND=17, LOG=18, FACTORIAL=19, 
		P=20, SQRT=21, E=22, SEMI=23, LEFTPAR=24, RIGHTPAR=25, NUM=26, LOGIC=27;
	public static final String[] tokenNames = {
		"<INVALID>", "ID", "WS", "'+'", "'-'", "'*'", "'/'", "'^'", "'sin'", "'cos'", 
		"'tan'", "'cot'", "'%'", "'&&'", "'||'", "'!'", "'xor'", "'nand'", "'log'", 
		"'fact'", "'π'", "'sqrt'", "'e'", "';'", "'('", "')'", "NUM", "LOGIC"
	};
	public static final int
		RULE_rul = 0, RULE_logic_operations = 1, RULE_add_op = 2, RULE_minus_op = 3, 
		RULE_multi_op = 4, RULE_div_op = 5, RULE_pow_op = 6, RULE_sin_op = 7, 
		RULE_cos_op = 8, RULE_tan_op = 9, RULE_cot_op = 10, RULE_mod_op = 11, 
		RULE_and_op = 12, RULE_or_op = 13, RULE_not_op = 14, RULE_xor_op = 15, 
		RULE_nand_op = 16, RULE_log_op = 17, RULE_factorial_op = 18, RULE_p_op = 19, 
		RULE_sqrt_op = 20, RULE_e_op = 21;
	public static final String[] ruleNames = {
		"rul", "logic_operations", "add_op", "minus_op", "multi_op", "div_op", 
		"pow_op", "sin_op", "cos_op", "tan_op", "cot_op", "mod_op", "and_op", 
		"or_op", "not_op", "xor_op", "nand_op", "log_op", "factorial_op", "p_op", 
		"sqrt_op", "e_op"
	};

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RulContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HelloParser.EOF, 0); }
		public Logic_operationsContext logic_operations(int i) {
			return getRuleContext(Logic_operationsContext.class,i);
		}
		public List<Logic_operationsContext> logic_operations() {
			return getRuleContexts(Logic_operationsContext.class);
		}
		public RulContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rul; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterRul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitRul(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitRul(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulContext rul() throws RecognitionException {
		RulContext _localctx = new RulContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rul);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44); logic_operations();
				}
				}
				setState(47); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SIN) | (1L << COS) | (1L << TAN) | (1L << COT) | (1L << NOT) | (1L << LOG) | (1L << P) | (1L << SQRT) | (1L << E) | (1L << NUM) | (1L << LOGIC))) != 0) );
			setState(49); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logic_operationsContext extends ParserRuleContext {
		public Add_opContext add_op() {
			return getRuleContext(Add_opContext.class,0);
		}
		public Div_opContext div_op() {
			return getRuleContext(Div_opContext.class,0);
		}
		public Xor_opContext xor_op() {
			return getRuleContext(Xor_opContext.class,0);
		}
		public Sin_opContext sin_op() {
			return getRuleContext(Sin_opContext.class,0);
		}
		public Tan_opContext tan_op() {
			return getRuleContext(Tan_opContext.class,0);
		}
		public Not_opContext not_op() {
			return getRuleContext(Not_opContext.class,0);
		}
		public Or_opContext or_op() {
			return getRuleContext(Or_opContext.class,0);
		}
		public Cot_opContext cot_op() {
			return getRuleContext(Cot_opContext.class,0);
		}
		public P_opContext p_op() {
			return getRuleContext(P_opContext.class,0);
		}
		public Pow_opContext pow_op() {
			return getRuleContext(Pow_opContext.class,0);
		}
		public Sqrt_opContext sqrt_op() {
			return getRuleContext(Sqrt_opContext.class,0);
		}
		public Cos_opContext cos_op() {
			return getRuleContext(Cos_opContext.class,0);
		}
		public E_opContext e_op() {
			return getRuleContext(E_opContext.class,0);
		}
		public Factorial_opContext factorial_op() {
			return getRuleContext(Factorial_opContext.class,0);
		}
		public And_opContext and_op() {
			return getRuleContext(And_opContext.class,0);
		}
		public Log_opContext log_op() {
			return getRuleContext(Log_opContext.class,0);
		}
		public Multi_opContext multi_op() {
			return getRuleContext(Multi_opContext.class,0);
		}
		public Minus_opContext minus_op() {
			return getRuleContext(Minus_opContext.class,0);
		}
		public Mod_opContext mod_op() {
			return getRuleContext(Mod_opContext.class,0);
		}
		public Nand_opContext nand_op() {
			return getRuleContext(Nand_opContext.class,0);
		}
		public Logic_operationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic_operations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterLogic_operations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitLogic_operations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitLogic_operations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logic_operationsContext logic_operations() throws RecognitionException {
		Logic_operationsContext _localctx = new Logic_operationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_logic_operations);
		try {
			setState(71);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51); add_op();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(52); minus_op();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(53); multi_op();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(54); div_op();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(55); pow_op();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(56); sin_op();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(57); cos_op();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(58); tan_op();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(59); cot_op();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(60); mod_op();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(61); and_op();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(62); or_op();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(63); not_op();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(64); xor_op();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(65); nand_op();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(66); log_op();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(67); factorial_op();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(68); p_op();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(69); sqrt_op();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(70); e_op();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_opContext extends ParserRuleContext {
		public List<TerminalNode> NUM() { return getTokens(HelloParser.NUM); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode NUM(int i) {
			return getToken(HelloParser.NUM, i);
		}
		public TerminalNode ADD() { return getToken(HelloParser.ADD, 0); }
		public Add_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterAdd_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitAdd_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitAdd_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Add_opContext add_op() throws RecognitionException {
		Add_opContext _localctx = new Add_opContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_add_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); match(NUM);
			setState(74); match(ADD);
			setState(75); match(NUM);
			setState(76); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Minus_opContext extends ParserRuleContext {
		public List<TerminalNode> NUM() { return getTokens(HelloParser.NUM); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode NUM(int i) {
			return getToken(HelloParser.NUM, i);
		}
		public TerminalNode MINUS() { return getToken(HelloParser.MINUS, 0); }
		public Minus_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minus_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterMinus_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitMinus_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitMinus_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Minus_opContext minus_op() throws RecognitionException {
		Minus_opContext _localctx = new Minus_opContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_minus_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); match(NUM);
			setState(79); match(MINUS);
			setState(80); match(NUM);
			setState(81); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multi_opContext extends ParserRuleContext {
		public TerminalNode MULTI() { return getToken(HelloParser.MULTI, 0); }
		public List<TerminalNode> NUM() { return getTokens(HelloParser.NUM); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode NUM(int i) {
			return getToken(HelloParser.NUM, i);
		}
		public Multi_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multi_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterMulti_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitMulti_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitMulti_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multi_opContext multi_op() throws RecognitionException {
		Multi_opContext _localctx = new Multi_opContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_multi_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(NUM);
			setState(84); match(MULTI);
			setState(85); match(NUM);
			setState(86); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Div_opContext extends ParserRuleContext {
		public List<TerminalNode> NUM() { return getTokens(HelloParser.NUM); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode NUM(int i) {
			return getToken(HelloParser.NUM, i);
		}
		public TerminalNode DIV() { return getToken(HelloParser.DIV, 0); }
		public Div_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_div_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterDiv_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitDiv_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitDiv_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Div_opContext div_op() throws RecognitionException {
		Div_opContext _localctx = new Div_opContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_div_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(NUM);
			setState(89); match(DIV);
			setState(90); match(NUM);
			setState(91); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pow_opContext extends ParserRuleContext {
		public List<TerminalNode> NUM() { return getTokens(HelloParser.NUM); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode NUM(int i) {
			return getToken(HelloParser.NUM, i);
		}
		public TerminalNode POW() { return getToken(HelloParser.POW, 0); }
		public Pow_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pow_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterPow_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitPow_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitPow_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pow_opContext pow_op() throws RecognitionException {
		Pow_opContext _localctx = new Pow_opContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pow_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(NUM);
			setState(94); match(POW);
			setState(95); match(NUM);
			setState(96); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sin_opContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(HelloParser.NUM, 0); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode SIN() { return getToken(HelloParser.SIN, 0); }
		public TerminalNode RIGHTPAR() { return getToken(HelloParser.RIGHTPAR, 0); }
		public TerminalNode LEFTPAR() { return getToken(HelloParser.LEFTPAR, 0); }
		public Sin_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sin_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterSin_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitSin_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitSin_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sin_opContext sin_op() throws RecognitionException {
		Sin_opContext _localctx = new Sin_opContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sin_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(SIN);
			setState(99); match(LEFTPAR);
			setState(100); match(NUM);
			setState(101); match(RIGHTPAR);
			setState(102); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cos_opContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(HelloParser.NUM, 0); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode RIGHTPAR() { return getToken(HelloParser.RIGHTPAR, 0); }
		public TerminalNode LEFTPAR() { return getToken(HelloParser.LEFTPAR, 0); }
		public TerminalNode COS() { return getToken(HelloParser.COS, 0); }
		public Cos_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cos_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterCos_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitCos_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitCos_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cos_opContext cos_op() throws RecognitionException {
		Cos_opContext _localctx = new Cos_opContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cos_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(COS);
			setState(105); match(LEFTPAR);
			setState(106); match(NUM);
			setState(107); match(RIGHTPAR);
			setState(108); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tan_opContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(HelloParser.NUM, 0); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode TAN() { return getToken(HelloParser.TAN, 0); }
		public TerminalNode RIGHTPAR() { return getToken(HelloParser.RIGHTPAR, 0); }
		public TerminalNode LEFTPAR() { return getToken(HelloParser.LEFTPAR, 0); }
		public Tan_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tan_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterTan_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitTan_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitTan_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tan_opContext tan_op() throws RecognitionException {
		Tan_opContext _localctx = new Tan_opContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tan_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(TAN);
			setState(111); match(LEFTPAR);
			setState(112); match(NUM);
			setState(113); match(RIGHTPAR);
			setState(114); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cot_opContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(HelloParser.NUM, 0); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode COT() { return getToken(HelloParser.COT, 0); }
		public TerminalNode RIGHTPAR() { return getToken(HelloParser.RIGHTPAR, 0); }
		public TerminalNode LEFTPAR() { return getToken(HelloParser.LEFTPAR, 0); }
		public Cot_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cot_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterCot_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitCot_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitCot_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cot_opContext cot_op() throws RecognitionException {
		Cot_opContext _localctx = new Cot_opContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cot_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(COT);
			setState(117); match(LEFTPAR);
			setState(118); match(NUM);
			setState(119); match(RIGHTPAR);
			setState(120); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mod_opContext extends ParserRuleContext {
		public List<TerminalNode> NUM() { return getTokens(HelloParser.NUM); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode NUM(int i) {
			return getToken(HelloParser.NUM, i);
		}
		public TerminalNode MOD() { return getToken(HelloParser.MOD, 0); }
		public Mod_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mod_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterMod_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitMod_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitMod_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mod_opContext mod_op() throws RecognitionException {
		Mod_opContext _localctx = new Mod_opContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mod_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(NUM);
			setState(123); match(MOD);
			setState(124); match(NUM);
			setState(125); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class And_opContext extends ParserRuleContext {
		public List<TerminalNode> LOGIC() { return getTokens(HelloParser.LOGIC); }
		public TerminalNode LOGIC(int i) {
			return getToken(HelloParser.LOGIC, i);
		}
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode AND() { return getToken(HelloParser.AND, 0); }
		public And_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterAnd_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitAnd_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitAnd_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final And_opContext and_op() throws RecognitionException {
		And_opContext _localctx = new And_opContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_and_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(LOGIC);
			setState(128); match(AND);
			setState(129); match(LOGIC);
			setState(130); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Or_opContext extends ParserRuleContext {
		public List<TerminalNode> LOGIC() { return getTokens(HelloParser.LOGIC); }
		public TerminalNode LOGIC(int i) {
			return getToken(HelloParser.LOGIC, i);
		}
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public TerminalNode OR() { return getToken(HelloParser.OR, 0); }
		public Or_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterOr_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitOr_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitOr_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Or_opContext or_op() throws RecognitionException {
		Or_opContext _localctx = new Or_opContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_or_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(LOGIC);
			setState(133); match(OR);
			setState(134); match(LOGIC);
			setState(135); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Not_opContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(HelloParser.NOT, 0); }
		public TerminalNode LOGIC() { return getToken(HelloParser.LOGIC, 0); }
		public TerminalNode SEMI() { return getToken(HelloParser.SEMI, 0); }
		public Not_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_not_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
